Bug 119824 - EDITING DOCX Changes to numbering paragraphs incorrectly listed in Manage Changes, with reappearing deleted content using Redo
Summary: EDITING DOCX Changes to numbering paragraphs incorrectly listed in Manage Cha...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2018-09-12 15:40 UTC by Xisco Faulí
Modified: 2019-03-13 21:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-09-12 15:40:11 UTC
Steps to reproduce:
1. Open attachment 143846 [details] from bug 119019
2. Display the Manage Changes dialog -> 4 changes from Gabor listed
3. Delete 'Mauris et orci.' in the document -> The change is added but one change from Gabor is removed...
4. Undo the action -> the change is removed but only 3 changes from Gabor are listed  now
5. Undo again -> the forth change from Gabor is added
6. Redo -> Only 2 changes from Gabor are listed

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 2da435922f9c1fcf52eb0c1eb3d6f73581e9f793
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-09-12 15:45:45 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=694a6389e84d5b416cde6dde2d5eaa589a0a6493

author	László Németh <nemeth@numbertext.org>	2018-09-06 17:21:05 +0200
committer	László Németh <nemeth@numbertext.org>	2018-09-07 20:55:03 +0200
commit 694a6389e84d5b416cde6dde2d5eaa589a0a6493 (patch)
tree c9d1caa5d8d311ca682685892ac70b0444b74c0d
parent 453fde35bb838febf73bfda0bd981ee270c9b12e (diff)
tdf#119019 DOCX track changes: fix invisible delete and insert

Bisected with bibisect-linux64-6.2

Adding Cc: to László Németh

Not reproduced before https://cgit.freedesktop.org/libreoffice/core/commit/?id=9dbf817fe5c5253fba0831aefa17575ae0ba3af1
Comment 2 László Németh 2018-11-27 19:17:09 UTC
Note: my patch for invisible change tracking has been fixed the following Undo bug, too, so the origin of the Undo/Redo problem had already been there:

Steps to reproduce (for example, in LibreOffice 5.1.6.2):
1. Open attachment 143846 [details] from bug 119019
2. Display the Manage Changes dialog -> 4 changes from Gabor listed
3. Write a letter "c" in list item 2 at the end of the word "et" ("et" -> "etc"): a change added to the dialog.
4. Select and delete the word "fames" in the same paragraph. A change added to the dialog. [Deletion is not visible]
5. Select and delete the word "turpis" in the same paragraph. A change added to the dialog. [Deletion is not visible]
6. Undo the action: The change is removed, but a new change from Gabor is added by splitting his original change, removing the word "turpis" from change tracking permanently (ie. after other Undos, too).
Comment 3 László Németh 2018-11-29 10:13:29 UTC
Note: A serious problem, that using Redo, the deleted content (first part of the modified paragraph) reappears again, as non-deleted text.
Comment 4 László Németh 2018-11-29 10:31:44 UTC
Proposed fix: https://gerrit.libreoffice.org/#/c/64218/
Comment 5 Commit Notification 2018-11-30 11:26:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/4b850b204fbbe13e3ed11434f262dfabe528241a%5E%21

tdf#119824 fix undo/redo of overlapping redlines

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 László Németh 2018-11-30 11:28:49 UTC
Xisco: thanks for reporting!
Comment 7 Commit Notification 2018-11-30 15:13:03 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/f52399177fcab220867c1dcae35c6db5c904138d%5E%21

tdf#119824 fix undo/redo of overlapping redlines

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2018-12-03 15:05:29 UTC
Hi László Németh,
Thanks for fixing this. However, I still see some problem following my original steps.

1. Open attachment 143846 [details] from bug 119019
2. Display the Manage Changes dialog -> 4 changes from Gabor listed
3. Delete 'Mauris et orci.' in the document -> The change is added but one change from Gabor is removed...
4. Undo the action -> the change is removed but only 3 changes from Gabor are listed  now

I suppose after performing steps 3, 5 steps should be displayed, 4 from Gabor + 1 from me.
In steps 4, 4 changes from Gabor should be displayed instead of 3.
Comment 9 Xisco Faulí 2019-03-13 18:32:26 UTC
Dear  László Németh,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Are you still working on this issue ? Please see comment 8
Comment 10 László Németh 2019-03-13 21:39:04 UTC
Xisco: the missing item was only a sign of the change, not a real tracked change, because recent OpenDocument doesn't support complete change tracking of style changes. That is why it's not possible to reject it.

Combining paragraph style changes with real tracked changes resulted several serious problems, and I hope, this issue was the last one.

According to this, I thnik, the remaining problem is acceptable, so I close this issue. But if you think, file a new one for the remaining problem, please. The real problem here is the missing change tracking of style changes. I hope, with the upcoming ODF 1.3 will be possible to give a better solution for that in the near future.

Thanks for the feedback, and sorry for my being late.