tdf#119824 fix undo/redo of overlapping redlines

Overlapping redlines (introduced by the
commit 9dbf817fe5c5253fba0831aefa17575ae0ba3af1
"handle scope of w:pPrChange and w:rPrChange properly"
for showing tracked DOCX paragraph formatting) resulted
losing of tracked deletion, ie. reappearing deleted
content using Redo (reported after fixing the broken
non-visible change tracking with overlapping redlines in
commit 694a6389e84d5b416cde6dde2d5eaa589a0a6493
"tdf#119019 DOCX track changes: fix invisible delete
and insert").

Change-Id: I63fde7e89afde99cff242968d34cc70455c5c3c2
Reviewed-on: https://gerrit.libreoffice.org/64218
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 4b850b204fbbe13e3ed11434f262dfabe528241a)